--- a/dandiapi/api/templates/dashboard/index.html
+++ b/dandiapi/api/templates/dashboard/index.html
@@ -26,6 +26,39 @@
     {% endif %}
   </div>
 
+  <div>
+    <h1>Orphaned Uploads</h1>
+    <p>There are currently {{ upload_count }} Uploads.</p>
+    {% if uploads %}
+    <p>They may simply be very recent and currently uploading, or they might be abandoned.</p>
+    <table>
+      <caption>
+        Some Uploads
+      </caption>
+      <thead>
+        <tr>
+          <td>ID</td>
+          <td>Upload ID</td>
+          <td>Size (reported)</td>
+          <td>Size (actual)</td>
+          <td>ETag (reported)</td>
+          <td>ETag (actual)</td>
+        </tr>
+      </thead>
+      {% for upload in uploads %}
+      <tr>
+        <td>{{ upload.id }}</td>
+        <td>{{ upload.upload_id }}</td>
+        <td>{{ upload.size }}</td>
+        <td>{% if upload.exists %} {{ upload.actual_size }} {% else %} Doesn't exist {% endif %}</td>
+        <td>{{ upload.etag }}</td>
+        <td>{% if upload.exists %} {{ upload.actual_etag }} {% else %} Doesn't exist {% endif %}</td>
+      </tr>
+      {% endfor %}
+    </table>
+    {% endif %}
+  </div>
+
   {% if non_valid_assets %}
   <div>
     <h1>Non-valid Assets</h1>
