--- a/dandiapi/api/templates/dashboard/index.html
+++ b/dandiapi/api/templates/dashboard/index.html
@@ -43,6 +43,8 @@
           <td>Size (actual)</td>
           <td>ETag (reported)</td>
           <td>ETag (actual)</td>
+          <td>Created</td>
+          <td>Modified</td>
         </tr>
       </thead>
       {% for upload in uploads %}
@@ -53,6 +55,8 @@
         <td>{% if upload.exists %} {{ upload.actual_size }} {% else %} Doesn't exist {% endif %}</td>
         <td>{{ upload.etag }}</td>
         <td>{% if upload.exists %} {{ upload.actual_etag }} {% else %} Doesn't exist {% endif %}</td>
+        <td>{{ upload.created }}</td>
+        <td>{{ upload.modified }}</td>
       </tr>
       {% endfor %}
     </table>
@@ -79,6 +83,8 @@
           <td>Size</td>
           <td>SHA256</td>
           <td>Versions</td>
+          <td>Created</td>
+          <td>Modified</td>
         </tr>
       </thead>
       {% for asset in non_valid_assets %}
@@ -97,6 +103,8 @@
           {{ version.dandiset.identifier }}/{{ version.version }},
           {% endfor %}
         </td>
+        <td>{{ asset.created }}</td>
+        <td>{{ asset.modified }}</td>
       </tr>
       {% endfor %}
     </table>
