--- a/dandiapi/api/templates/api/mail/registered_message.html
+++ b/dandiapi/api/templates/api/mail/registered_message.html
@@ -1,7 +1,7 @@
 <p>Dear {{ name }} (Github ID: <a href="https://github.com/{{ github_id }}">{{ github_id }})</a>,</p>
 <p>Welcome to DANDI. </p>
-<p>You are now registered on the DANDI archive. Registering allows you to create Dandisets and upload data right away. You can also use the Jupyterhub (<a href="https://hub.dandiarchive.org">https://hub.dandiarchive.org</a>) for computing on dandisets in the cloud. </p>
-<p>It may take up to 24 hours for your hub account to be activated and for your email to be registered with our Slack workspace.</p>
+<p>Thank you for registering on the DANDI archive. Your account is now pending approval by a DANDI admin. Once approved, you will be able to create Dandisets and upload data right away. You will also be able to use the Jupyterhub (<a href="https://hub.dandiarchive.org">https://hub.dandiarchive.org</a>) for computing on dandisets in the cloud.</p>
+<p>It may take up to 48 hours for your account to be approved and for your email to be registered with our Slack workspace.</p>
 <p>Please post any <a href="https://github.com/dandi/helpdesk/discussions">questions</a> or <a href="https://github.com/dandi/helpdesk/issues">issues</a> at our <a href="https://github.com/dandi/helpdesk/issues/new/choose">helpdesk</a>.</p>
 <p>Thank you for choosing DANDI for your neurophysiology data needs.</p>
 <p>Sincerely,</p>
