Button styling Make ssr button blue to be more consistent with web ui

--- a/dandiapi/api/templates/api/account/questionnaire_form.html
+++ b/dandiapi/api/templates/api/account/questionnaire_form.html
@@ -16,7 +16,7 @@
         {% for name, value in query_params.items %}
           <input type="hidden" name="{{ name }}" value="{{ value }}">
         {% endfor %}
-        <button id="btn" class="btn waves-effect waves-light" type="submit">
+        <button id="btn" class="btn waves-effect waves-light blue" type="submit">
           <span>Submit</span>
           <i class="material-icons right">send</i>
         </button>
