Fix wrong url in new user email

--- a/dandiapi/api/templates/api/mail/new_user_message.html
+++ b/dandiapi/api/templates/api/mail/new_user_message.html
@@ -1,3 +1,3 @@
 <p>A new user ({{ username }}) has signed up for DANDI.</p>
 <p>Please proceed to the following URL to approve or reject their account:</p>
-<a href="https://api.dandiarchive.org/dashboard/{{ username }}">https://api.dandiarchive.org/dashboard/{{ username }}</a>
+<a href="https://api.dandiarchive.org/dashboard/user/{{ username }}">https://api.dandiarchive.org/dashboard/{{ username }}</a>
