--- a/dandiapi/api/templates/api/account/base.html
+++ b/dandiapi/api/templates/api/account/base.html
@@ -23,10 +23,26 @@
       margin-top: 10%;
       margin-bottom: 10%;
     }
+    .logo-container {
+      padding-left: 2%;
+      margin: auto;
+    }
+    .logo {
+      height: 40px;
+      margin-top: 10px;
+    }
   </style>
 </head>
 
 <body>
+  <nav style="background-color: #f5f5f5;">
+    <div class="nav-wrapper logo-container">
+      <a href="https://dandiarchive.org" class="brand-logo">
+        {% load static %}
+        <img src="{% static 'api/dandi_logo.svg' %}" class="logo">
+      </a>
+    </div>
+  </nav>
   <div class="container center-align">
     {% block body %}
     {% endblock body %}
