--- a/dandiapi/api/templates/api/account/base.html
+++ b/dandiapi/api/templates/api/account/base.html
@@ -38,8 +38,7 @@
   <nav style="background-color: #f5f5f5;">
     <div class="nav-wrapper logo-container">
       <a href="https://dandiarchive.org" class="brand-logo">
-        {% load static %}
-        <img src="{% static 'api/dandi_logo.svg' %}" class="logo">
+        <img src="https://raw.githubusercontent.com/dandi/dandi.github.io/master/assets/dandi_logo.svg" class="logo">
       </a>
     </div>
   </nav>
