Add help text for users who have questions

--- a/dandiapi/api/templates/api/account/questionnaire_form.html
+++ b/dandiapi/api/templates/api/account/questionnaire_form.html
@@ -23,6 +23,9 @@
       </div>
     </div>
   </form>
+  <div style="margin-top: 4%">
+    Contact us at <a href="mailto:help@dandiarchive.org">help@dandiarchive.org</a> if you have any questions.
+  </div>
 
   <script>
     // Length validation
