--- a/dandiapi/api/templates/dashboard/index.html
+++ b/dandiapi/api/templates/dashboard/index.html
@@ -111,5 +111,39 @@
     {% endif %}
   </div>
 
+  <div>
+    <h1>Users</h1>
+    <p>There are currently {{ user_count }} users.</p>
+    <!-- Two different tables so that emails can be copied easily -->
+    <table style="float: left">
+      <thead>
+        <tr>
+          <td>Email</td>
+        </tr>
+      </thead>
+      {% for user in users %}
+      <tr>
+        <td> {{ user.email }} </td>
+      </tr>
+      {% endfor %}
+    </table>
+    <table style="float: left">
+      <thead>
+        <tr>
+          <td>First name</td>
+          <td>Last name</td>
+          <td>Date joined</td>
+        </tr>
+      </thead>
+      {% for user in users %}
+      <tr>
+        <td>{{ user.first_name }}</td>
+        <td>{{ user.last_name }}</td>
+        <td>{{ user.date_joined }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+
 </div>
 {% endblock %}
