Only include approved users

--- a/dandiapi/api/templates/dashboard/index.html
+++ b/dandiapi/api/templates/dashboard/index.html
@@ -112,8 +112,8 @@
   </div>
 
   <div>
-    <h1>Users</h1>
-    <p>There are currently {{ user_count }} users.</p>
+    <h1>Approved Users</h1>
+    <p>There are currently {{ user_count }} approved users.</p>
     <!-- Two different tables so that emails can be copied easily -->
     <table style="float: left">
       <thead>
