Use env vars instead of hardcoding URLs

--- a/dandiapi/api/templates/api/account/base.html
+++ b/dandiapi/api/templates/api/account/base.html
@@ -37,7 +37,7 @@
 <body>
   <nav style="background-color: #f5f5f5;">
     <div class="nav-wrapper logo-container">
-      <a href="https://dandiarchive.org" class="brand-logo">
+      <a href="{{ dandi_web_app_url }}" class="brand-logo">
         <img src="https://raw.githubusercontent.com/dandi/dandi.github.io/master/assets/dandi_logo.svg" class="logo">
       </a>
     </div>
