--- a/dandiapi/api/templates/api/mail/added_message.html
+++ b/dandiapi/api/templates/api/mail/added_message.html
@@ -1,2 +1,3 @@
 You have been made an owner of Dandiset
-<a href="https://dandiarchive.org/dandiset/{{ dandiset_identifier }}">{{ dandiset_name }}</a>.
+<a href="{{ dandi_web_app_url }}/dandiset/{{ dandiset_identifier }}">{{ dandiset_name }}</a>.
+<p>{{ current_site }}</p>
