--- a/dandiapi/api/templates/api/mail/removed_message.html
+++ b/dandiapi/api/templates/api/mail/removed_message.html
@@ -1,2 +1,2 @@
 You have been removed as an owner of Dandiset
-<a href="https://dandiarchive.org/dandiset/{{ dandiset_identifier }}">{{ dandiset_name }}</a>.
+<a href="{{ dandi_web_app_url }}/dandiset/{{ dandiset_identifier }}">{{ dandiset_name }}</a>.
