--- a/dandiapi/api/templates/dashboard/index.html
+++ b/dandiapi/api/templates/dashboard/index.html
@@ -1,12 +1,4 @@
-{% extends "admin/base.html" %}
-
-{% block title %} Data Dashboard {% endblock %}
-
-{% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Django administration') }}</a></h1>
-{% endblock %}
-
-{% block nav-global %}{% endblock %}
+{% extends "dashboard/base.html" %}
 
 {% block content %}
 <div id="content-main">
