--- a/dandiapi/api/templates/dashboard/base.html
+++ b/dandiapi/api/templates/dashboard/base.html
@@ -5,3 +5,17 @@
 {% block branding %}
 <h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Django administration') }}</a></h1>
 {% endblock %}
+
+{% block breadcrumbs %}
+<style>
+  .dandi-navbar-link {
+    margin-right: 2em;
+  }
+</style>
+<div class="breadcrumbs">
+  <a class="dandi-navbar-link" href="{% url 'dashboard-index' %}">Dashboard Home</a>
+  <a class="dandi-navbar-link" href="{% url 'dashboard-users' %}">Users Dashboard</a>
+  <a class="dandi-navbar-link" href="{% url 'admin:index' %}">Admin</a>
+  {% if title %} &rsaquo; {{ title }}{% endif %}
+</div>
+{% endblock %}
