Remove extra character displayed on user dashboard page

--- a/dandiapi/api/templates/dashboard/users.html
+++ b/dandiapi/api/templates/dashboard/users.html
@@ -25,7 +25,7 @@
     </thead>
     {% for user in filter.qs %}
     <tr>
-      <td> {{ user.email }} d</td>
+      <td>{{ user.email }}</td>
     </tr>
     {% endfor %}
   </table>
