--- a/dandiapi/api/templates/dashboard/user_approval.html
+++ b/dandiapi/api/templates/dashboard/user_approval.html
@@ -66,7 +66,11 @@
         <form method="POST">
           {% csrf_token %}
           <input type="hidden" name="status" value="APPROVED">
-          <button class="waves-effect waves-light btn-large green accent-5" type="submit">
+          <button
+            {% if user.metadata.status == 'APPROVED' %}
+              disabled
+            {% endif %}
+            class="waves-effect waves-light btn-large green accent-5" type="submit">
             <span>APPROVE</span>
           </button>
         </form>
